--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 		<article>
 			<h3>Staging Area (INDEX)</h3>
 			<p>
-				El area de control de cambios corresponde al archivo que <em>se encuentra en la carpeta .git</em> que se crea al iniciar un repositorio. Aqui se registran los archivos a los vamos a hacerle seguimiento y es el punto de comparacion para confirmar dichos cambios. Es necesario agregar los archivos con los que estemos trabajando a dicha area para avanzar con el historial de cambios,
+				El area de control de cambios corresponde al archivo que <em>se encuentra en la carpeta .git</em> que se crea al iniciar un repositorio. Aqui se registran los archivos a los vamos a hacerle seguimiento y es el punto de comparacion para confirmar dichos cambios. Es necesario agregar los archivos con los que estemos trabajando a dicha area para avanzar con el historial de cambios, ya que git a utilizar el comando <strong>git add </strong> realiza una captura del codigo.
+			</p>
+		</article>
+		<article>
+			<h3>Repository (Local/Remote)</h3>
+			<p>
+				El repositorio corresponde a la base de datos donde se almacenan los cambios en formato <strong>BLOB(Binary Object File)</strong> y es el lugar al que podemos acceder cada vez que necesitemos revisar algun estado anterior de nuestro proyecto. Esto es posible gracias a los <em>commits</em> identificados median un numero de HASH.
 			</p>
 		</article>
 	</section>
